policies/httproute-enforce-allowed-hostnames/tests/overlays/test01/generated/admissionregistration.k8s.io_v1beta1_validatingadmissionpolicybinding_vaplibtest-httproute-hostnames-test01.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: vaplibtest-httproute-hostnames-test01
  namespace: vaplibtest-httproutehostname-test01
spec:
  matchResources:
    matchPolicy: Equivalent
    namespaceSelector:
      matchLabels:
        kubernetes.io/metadata.name: vaplibtest-httproutehostname-test01
    objectSelector: {}
  paramRef:
    name: vaplibtest-param-test01
    namespace: vaplibtest-httproutehostname-test01
    parameterNotFoundAction: Deny
  policyName: vaplib-httproute-enforce-allowed-hostnames
  validationActions:
  - Deny
