policies/httproute-enforce-allowed-hostnames/tests/overlays/test01/generated/gateway.networking.k8s.io_v1beta1_httproute_vaplibtest-httproute-example-test01.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: vaplibtest-httproute-example-test01
  namespace: vaplibtest-httproutehostname-test01
spec:
  hostnames:
  - test2.example.com
  parentRefs:
  - name: test
