policies/httproute-enforce-allowed-hostnames/tests/overlays/test01/generated/v1_namespace_vaplibtest-httproutehostname-test01.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vaplibtest-httproutehostname-test01
