policies/httproute-enforce-allowed-hostnames/tests/overlays/test01/generated/vap-library.io_v1beta1_vaplibhttproutehostnameparam_vaplibtest-param-test01.yaml
apiVersion: vap-library.com/v1beta1
kind: VAPLIBHTTPRouteHostnameParam
metadata:
  name: vaplibtest-param-test01
  namespace: vaplibtest-httproutehostname-test01
spec:
  allowedHostnames:
  - test.example.com
  - test2.example.com
